--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,12 @@ spring.datasource.username=root
 spring.datasource.password=Intuit
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+
+#player.data.csv.path=classpath:/players.csv
 
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/player?useSSL=false&allowPublicKeyRetrieval=true
